--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,11 @@ img {
   margin: 0 auto;
 }
 
+.page-header--catalog,
+.page-header--form {
+  margin-bottom: 27px;
+}
+
 .page-header__wrapper {
   width: 87%;
   height: 65px;
@@ -81,14 +86,6 @@ img {
   flex-wrap: wrap;
   margin: 0 auto;
   position: relative;
-}
-.page-header__wrapper a {
-  font-family: "Oswald", "Arial", sans-serif;
-  font-weight: 400;
-  font-size: 20px;
-  color: #000;
-  text-decoration: none;
-  text-transform: uppercase;
 }
 
 .page-header__toggle {
@@ -109,12 +106,16 @@ img {
     padding-top: 20px;
   }
 
+  .page-header--form {
+    margin-bottom: 64px;
+  }
+
+  .page-header--catalog {
+    margin-bottom: 64px;
+  }
+
   .page-header__wrapper {
     width: 92%;
-  }
-  .page-header__wrapper a {
-    font-size: 18px;
-    line-height: 24px;
   }
 
   .page-header__logo-text {
@@ -134,31 +135,90 @@ img {
     background-size: auto 694px;
   }
 
+  .page-header--catalog {
+    margin-bottom: 74px;
+    background-image: none;
+  }
+  .page-header--catalog .main-navigation__link {
+    color: #000;
+  }
+
+  .page-header--form {
+    background-image: none;
+    margin-bottom: 73px;
+  }
+
   .page-header__wrapper {
     max-width: 1220px;
-    width: 85%;
-  }
-  .page-header__wrapper a {
-    font-size: 20px;
-    line-height: 30px;
+    width: 87%;
   }
 }
 .page-main {
   min-width: 320px;
 }
 
+.page-main__wrapper {
+  width: 87%;
+  margin: 0 auto;
+  max-width: 1220px;
+}
+
 .page-main__title {
   margin: 0;
-  min-height: 104px;
-  padding-top: 27px;
-  padding-bottom: 27px;
+  min-height: 36px;
+  margin-bottom: 50px;
   box-sizing: border-box;
   font-family: "Oswald", "Arial", sans-serif;
   font-size: 36px;
   line-height: 36px;
   font-weight: 400;
+  color: #000;
 }
 
+.page-main__title--form {
+  margin-bottom: 37px;
+}
+
+.page-main__text {
+  margin: 0;
+  color: #000;
+  text-transform: uppercase;
+  padding-right: 54px;
+  margin-bottom: 40px;
+}
+
+@media (min-width: 768px) {
+  .page-main__title {
+    font-size: 60px;
+    line-height: 60px;
+    padding: 0;
+    margin-bottom: 82px;
+    min-height: 60px;
+  }
+
+  .page-main__title--form {
+    padding-left: 40px;
+    margin-bottom: 54px;
+  }
+
+  .page-main__text--form {
+    font-size: 20px;
+    line-height: 30px;
+    padding-left: 40px;
+    padding-right: 305px;
+    margin-bottom: 66px;
+  }
+}
+@media (min-width: 1440px) {
+  .page-main__title--form {
+    padding-left: 0;
+  }
+
+  .page-main__text--form {
+    padding: 0;
+    width: 323px;
+  }
+}
 .page-footer {
   background-color: #f2f2f2;
   min-height: 158px;
@@ -227,6 +287,15 @@ img {
   padding: 23px 20px;
 }
 
+.main-navigation__link {
+  font-family: "Oswald", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+  color: #000;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
 @media (min-width: 768px) {
   .main-navigation {
     all: initial;
@@ -244,14 +313,23 @@ img {
   .main-navigation__item:last-child {
     margin-right: 0;
   }
+
+  .main-navigation__link {
+    font-size: 18px;
+    line-height: 24px;
+  }
 }
 @media (min-width: 1440px) {
-  .main-navigation__item a {
+  .main-navigation__link {
     color: #fff;
     font-size: 20px;
     line-height: 20px;
     position: relative;
     z-index: 1;
+  }
+
+  .main-navigation__link--black-text {
+    color: #111;
   }
 }
 .choose-program {
@@ -900,12 +978,20 @@ img {
     justify-content: start;
   }
 
+  .example__description {
+    background-color: #eaeaea;
+  }
+
   .example__img-wrapper {
     margin: 0;
   }
 }
 .address-map {
   min-height: 112px;
+}
+
+.address-map--grey-bg {
+  background-color: #f2f2f2;
 }
 
 .address-map__wrapper {
@@ -949,6 +1035,11 @@ img {
     padding: 56px 40px;
     box-sizing: border-box;
     grid-template-columns: 180px 180px;
+  }
+
+  .address-map__wrapper--form {
+    padding-left: 60px;
+    padding-right: 60px;
   }
 
   .address-map__text {
@@ -1088,6 +1179,10 @@ img {
     padding-top: 43px;
   }
 }
+.catalog {
+  margin-bottom: 50px;
+}
+
 .catalog__list {
   list-style-type: none;
   margin: 0;
@@ -1095,11 +1190,817 @@ img {
   min-height: 190px;
 }
 
+.catalog__item {
+  display: grid;
+  grid-template-columns: 140px 1fr 1fr;
+  min-height: 100px;
+}
+
+.catalog__item:not(:last-child) {
+  margin-bottom: 44px;
+}
+
 .catalog__item-link {
   display: block;
+  grid-row: 1/3;
+  text-decoration: none;
+  text-align: center;
+  margin-bottom: 14px;
 }
 
 .catalog__item-title {
   margin: 0;
+  grid-column: 2/4;
+  grid-row: 1/2;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: uppercase;
+  color: #222;
+  padding-right: 40px;
+  margin-bottom: 18px;
+}
+
+.catalog__item--show-more {
+  box-sizing: border-box;
+  min-height: 158px;
+  padding-top: 53px;
+}
+.catalog__item--show-more .catalog__item-link {
+  margin-bottom: 8px;
+}
+
+.catalog__item-title--show-more {
+  padding: 0;
+  color: #111;
+  margin-bottom: 0;
+}
+
+.catalog__item-text {
+  margin: 0;
+  font-family: "Arial", sans-serif;
+  font-size: 12px;
+  line-height: 16px;
+  color: #444;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.catalog__list-inner {
+  margin: 0;
+  grid-column: 2/4;
+  grid-row: 2/3;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  font-family: "Arial", sans-serif;
+  font-size: 12px;
+  line-height: 16px;
+  color: #444;
+  margin-bottom: 20px;
+}
+
+.catalog__item-value {
+  margin: 0;
+}
+
+.catalog__item-link-order {
+  grid-column: 1/-1;
+}
+
+@media (min-width: 768px) {
+  .catalog__list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 58px;
+  }
+
+  .catalog__item {
+    width: 324px;
+    min-height: 511px;
+    padding-right: 36px;
+    padding-left: 36px;
+    padding-bottom: 39px;
+    grid-template-columns: 1fr 1fr;
+    background: linear-gradient(#fff 0px, #fff 80px, #f2f2f2 80px);
+    box-sizing: border-box;
+  }
+
+  .catalog__item:not(:last-child) {
+    margin: 0;
+  }
+
+  .catalog__item-link {
+    grid-column: -1/1;
+    grid-row: 1/2;
+    min-height: 172px;
+    margin-top: 36px;
+    margin-bottom: 34px;
+  }
+
+  .catalog__item-title {
+    grid-column: -1/1;
+    grid-row: 2/3;
+    margin: 0;
+    padding: 0;
+    padding-right: 60px;
+    padding-left: 60px;
+    font-size: 20px;
+    line-height: 24px;
+    color: #222;
+    text-align: center;
+    min-height: 47px;
+    margin-bottom: 20px;
+  }
+
+  .catalog__list-inner {
+    grid-column: -1/1;
+    grid-row: 3/4;
+    min-height: 90px;
+    font-size: 16px;
+    row-gap: 14px;
+    margin-bottom: 33px;
+  }
+
+  .catalog__item-value {
+    justify-self: end;
+  }
+
+  .catalog__item--show-more {
+    width: 324px;
+    min-height: 429px;
+    margin-top: 80px;
+    padding-top: 160px;
+    border: 2px solid #f2f2f2;
+    box-sizing: border-box;
+  }
+  .catalog__item--show-more .catalog__item-link {
+    padding: 0;
+    min-height: 44px;
+    margin-top: 0;
+    margin-bottom: 23px;
+  }
+  .catalog__item--show-more .catalog__item-text {
+    font-size: 16px;
+    line-height: 18px;
+    padding-right: 76px;
+    padding-left: 76px;
+    margin-bottom: 87px;
+  }
+
+  .catalog__item-title--show-more {
+    padding-left: 93px;
+    padding-right: 93px;
+    line-height: 22px;
+    color: #111;
+    margin: 0;
+  }
+
+  .catalog-link-order--show-all {
+    margin-left: 36px;
+    margin-right: 36px;
+  }
+}
+@media (min-width: 1440px) {
+  .catalog {
+    margin-bottom: 76px;
+  }
+
+  .catalog__list {
+    gap: 0;
+    row-gap: 63px;
+  }
+  .catalog__list li:not(:nth-child(4n)) {
+    margin-right: 80px;
+  }
+
+  .catalog__item {
+    width: 245px;
+  }
+
+  .catalog__item--show-more {
+    width: 245px;
+  }
+  .catalog__item--show-more .catalog__item-link {
+    margin: 0;
+    margin-bottom: 23px;
+  }
+  .catalog__item--show-more .catalog__item-text {
+    padding-left: 36px;
+    padding-right: 36px;
+    margin-bottom: 87px;
+  }
+
+  .catalog__item-title {
+    padding-right: 15px;
+    padding-left: 20px;
+  }
+}
+.catalog-link-order {
+  display: block;
+  min-height: 40px;
+  text-decoration: none;
+  text-transform: uppercase;
+  background-color: #68b738;
+  color: #fff;
+  font-size: 16px;
+  line-height: 20px;
+  align-content: center;
+  text-align: center;
+}
+
+.catalog-link-order--show-all {
+  color: #444;
+  background-color: #f2f2f2;
+}
+
+@media (min-width: 768px) {
+  .catalog-link-order--additional {
+    grid-column: -1/1;
+  }
+}
+@media (min-width: 1440px) {
+  .catalog-link-order--additional {
+    grid-column: -2/-1;
+  }
+}
+.additional-products {
+  margin-bottom: 35px;
+}
+
+.additional-products__list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 50px;
+}
+
+.additional-products__item:not(:last-child) {
+  margin-bottom: 30px;
+}
+
+.additional-products__amount,
+.additional-products__price {
+  margin: 0;
+}
+
+.additional-products__title {
+  margin: 0;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 24px;
+  columns: #000;
+  margin-bottom: 50px;
+}
+
+.additional-products__list-title {
+  margin: 0;
+  font-size: 16px;
+  line-height: 16px;
+  color: #222;
+  font-weight: 400;
+  text-transform: uppercase;
+  margin-bottom: 13px;
+}
+
+.additional-products__list-wrapper {
+  font-family: "Arial", sans-serif;
+  font-size: 14px;
+  line-height: 14px;
+  color: #444;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 15px;
+}
+
+.additional-products__gift {
+  min-height: 290px;
+  padding: 185px 60px 40px;
+  box-sizing: border-box;
+  background-image: url("../../img/catalog-gift-bg-mobile.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: rgba(104, 183, 56, 0.85);
+}
+
+.additional-products__gift-text {
+  margin: 0;
+  font-family: "Arial", sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+  color: #fff;
+  text-align: center;
+}
+
+@media (min-width: 768px) {
+  .additional-products {
+    margin-bottom: 76px;
+  }
+
+  .additional-products__title {
+    margin-bottom: 80px;
+    margin-left: 36px;
+    font-size: 36px;
+    line-height: 36px;
+    color: #000;
+  }
+
+  .additional-products__list {
+    min-height: 556px;
+    padding: 26px 38px;
+    box-sizing: border-box;
+    border: 1px #cdcdcd solid;
+    margin-bottom: 69px;
+  }
+
+  .additional-products__item {
+    display: grid;
+    grid-template-columns: 1fr auto;
+    min-height: 85px;
+    box-sizing: border-box;
+  }
+  .additional-products__item:not(:last-child) {
+    margin-bottom: 54px;
+  }
+
+  .additional-products__list-title,
+.additional-products__list-wrapper {
+    margin: 0;
+  }
+
+  .additional-products__list-wrapper {
+    width: 225px;
+    margin-bottom: 25px;
+  }
+  .additional-products__list-wrapper p {
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  .additional-products__list-title {
+    font-size: 20px;
+    line-height: 20px;
+  }
+
+  .additional-products__gift {
+    min-height: unset;
+    min-height: 200px;
+    padding: 0;
+    padding: 70px 124px 70px 422px;
+    box-sizing: border-box;
+    background-image: url("../../img/catalog-gift-bg-tablet.jpg");
+  }
+
+  .additional-products__gift-text {
+    width: 162px;
+    min-height: 60px;
+    text-align: start;
+  }
+}
+@media (min-width: 1440px) {
+  .additional-products {
+    margin-bottom: 86px;
+  }
+
+  .additional-products__title {
+    margin-left: 0;
+  }
+
+  .additional-products__list-wrapper {
+    margin-bottom: 0;
+  }
+
+  .additional-products__wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    min-height: 288px;
+  }
+
+  .additional-products__list {
+    width: 896px;
+    min-height: 288px;
+    margin-right: auto;
+    border: none;
+    border-top: 1px solid #cdcdcd;
+    border-bottom: 1px solid #cdcdcd;
+    padding: 0;
+    margin-bottom: 0;
+  }
+
+  .additional-products__item {
+    grid-template-columns: 1fr 1fr 244px;
+    min-height: 72px;
+    align-items: center;
+  }
+  .additional-products__item:not(:last-child) {
+    margin: 0;
+    border-bottom: 1px solid #cdcdcd;
+  }
+
+  .additional-products__gift {
+    background-image: url("../../img/catalog-gift-bg-desktop.jpg");
+    width: 245px;
+    height: 288px;
+    padding: 184px 40px 40px;
+  }
+
+  .additional-products__gift-text {
+    text-align: center;
+  }
+}
+.form__required-text {
+  display: block;
+  text-align: center;
+  font-family: "Arial", sans-serif;
+  line-height: 16px;
+  margin-bottom: 32px;
+}
+
+@media (min-width: 768px) {
+  .form {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+
+  .form__required-text {
+    display: inline-block;
+    margin-bottom: 0;
+  }
+}
+@media (min-width: 1440px) {
+  .form {
+    padding: 0;
+  }
+
+  .form__wrapper-parameters-aim {
+    display: flex;
+    flex-wrap: wrap;
+    min-height: 200px;
+    margin-bottom: 69px;
+  }
+}
+.form-parameters {
+  border: none;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 50px;
+}
+
+.form-parameters__list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.form-parameters__item {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+.form-parameters__item:not(:last-child) {
+  margin-bottom: 14px;
+}
+
+.form-parameters__title-input {
+  margin-right: 13px;
+  text-transform: uppercase;
+  font-size: 16px;
+  color: #444;
+}
+
+.form-parameters__input-text {
+  flex-grow: 1;
+  font-size: 16px;
+  line-height: 18px;
+  text-transform: uppercase;
+  color: #444;
+  font-family: "Oswald", "Arial", sans-serif;
+  padding: 14px;
+  border: 1px solid #e7e7e7;
+}
+
+@media (min-width: 768px) {
+  .form-parameters {
+    margin-bottom: 72px;
+  }
+
+  .form-parameters__item:not(:last-child) {
+    margin-bottom: 20px;
+  }
+
+  .form-parameters__title-input,
+.form-parameters__input-text {
+    font-size: 20px;
+    line-height: 20px;
+    color: #444;
+  }
+
+  .form-parameters__input-text {
+    padding: 10px 18px;
+  }
+}
+@media (min-width: 1440px) {
+  .form-parameters {
+    width: 569px;
+    margin-bottom: 0;
+    margin-right: auto;
+  }
+}
+.form-aim {
+  border: none;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 45px;
+}
+
+.form-aim__list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  box-sizing: border-box;
+}
+
+.form-aim__item:not(:last-child) {
+  margin-bottom: 18px;
+}
+
+.form-aim__title-input {
+  font-size: 16px;
+  color: #222;
+  text-transform: uppercase;
+}
+
+@media (min-width: 768px) {
+  .form-aim {
+    margin-bottom: 75px;
+  }
+
+  .form-aim__list {
+    border: 1px solid #e7e7e7;
+    padding: 25px 28px;
+  }
+
+  .form-aim__title-input {
+    font-size: 20px;
+  }
+}
+@media (min-width: 1440px) {
+  .form-aim {
+    width: 568px;
+    margin-bottom: 0;
+  }
+}
+.form-contacts {
+  margin: 0;
+  padding: 0;
+  border: none;
+  margin-bottom: 24px;
+}
+
+.form-contacts__title {
+  font-size: 24px;
+  line-height: 26px;
+  color: #000;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 35px;
+}
+
+.form-contacts__list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.form-contacts__item {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+.form-contacts__item:not(:last-child) {
+  margin-bottom: 14px;
+}
+
+.form-contacts__title-input {
+  font-size: 16px;
+  text-transform: uppercase;
+  margin-right: 10px;
+}
+
+.form-contacts__input-text {
+  flex-grow: 1;
+  border: 1px solid #cdcdcd;
+  padding: 15px;
+  padding-right: 40px;
+  font-family: "Oswald", "Arial", sans-serif;
+  font-size: 16px;
+  line-height: 18px;
+  color: #444;
+  text-transform: uppercase;
+}
+
+@media (min-width: 768px) {
+  .form-contacts {
+    margin-bottom: 65px;
+  }
+
+  .form-contacts__title {
+    font-size: 36px;
+    line-height: 36px;
+    margin-bottom: 76px;
+  }
+
+  .form-contacts__title-input {
+    font-size: 20px;
+    line-height: 20px;
+  }
+
+  .form-contacts__input-text {
+    font-size: 20px;
+    line-height: 20px;
+    padding: 10px 100px 10px 22px;
+  }
+}
+@media (min-width: 1440px) {
+  .form-contacts__list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .form-contacts__item:not(:last-child) {
+    margin: 0;
+  }
+
+  .form-contacts__item {
+    width: 570px;
+  }
+
+  .form-contacts__item:nth-child(odd) {
+    margin-right: auto;
+  }
+}
+.form-comment {
+  border: none;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 22px;
+}
+
+.form-comment__title {
+  margin: 0;
+  padding: 0;
+  font-family: "Oswald", "Arial", sans-serif;
+  font-size: 24px;
+  line-height: 26px;
+  color: #000;
+  margin-bottom: 37px;
+}
+
+.form-comment__comment {
+  width: 100%;
+  min-height: 150px;
+  border: 1px solid #e7e7e7;
+  font-family: "Oswald", "Arial", sans-serif;
+  font-size: 16px;
+  line-height: 18px;
+  color: #444;
+  padding: 10px 15px;
+  box-sizing: border-box;
+}
+
+@media (min-width: 768px) {
+  .form-comment {
+    margin-bottom: 65px;
+  }
+
+  .form-comment__title {
+    font-size: 36px;
+    line-height: 36px;
+    margin-bottom: 76px;
+  }
+
+  .form-comment__comment {
+    min-height: 174px;
+    font-size: 20px;
+    line-height: 30px;
+  }
+}
+.form-additional {
+  border: none;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 34px;
+}
+
+.form-additional__title {
+  margin: 0;
+  padding: 0;
+  font-family: "Oswald", "Arial", sans-serif;
+  font-size: 24px;
+  line-height: 26px;
+  margin-bottom: 34px;
+  color: #000;
+}
+
+.form-additional__list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.form-additional__item {
+  min-height: 30px;
+}
+.form-additional__item:not(:last-child) {
+  margin-bottom: 12px;
+}
+
+.form-additional__checkbox {
+  margin: 0;
+}
+
+.form-additional__title-input {
+  font-size: 16px;
+  color: #000;
+  text-transform: uppercase;
+}
+
+@media (min-width: 768px) {
+  .form-additional {
+    margin-bottom: 54px;
+  }
+
+  .form-additional__title {
+    font-size: 36px;
+    line-height: 36px;
+    margin-bottom: 57px;
+  }
+
+  .form-additional__list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 32px 123px;
+  }
+
+  .form-additional__item {
+    width: 200px;
+  }
+  .form-additional__item:not(:last-child) {
+    margin-bottom: 0;
+  }
+
+  .form-additional__title-input {
+    font-size: 20px;
+    line-height: 20px;
+  }
+}
+@media (min-width: 1440px) {
+  .form-additional {
+    margin-bottom: 60px;
+  }
+
+  .form-additional__list {
+    gap: 0;
+    column-gap: 104px;
+  }
+
+  .form-additional__item {
+    width: 222px;
+  }
+}
+.button {
+  min-height: 40px;
+  background-color: #68b738;
+  display: block;
+  font-family: "Oswald", "Arial", sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+  color: #fff;
+  text-transform: uppercase;
+  border: none;
+  box-sizing: border-box;
+  padding: 7px 44px;
+}
+
+.button--submit-form {
+  width: 100%;
+  margin-bottom: 21px;
+}
+
+@media (min-width: 768px) {
+  .button--submit-form {
+    width: 282px;
+    min-height: 52px;
+    display: inline-block;
+    margin-right: 60px;
+    margin-bottom: 72px;
+  }
+}
+@media (min-width: 1440px) {
+  .button--submit-form {
+    width: 568px;
+    margin-right: 80px;
+    margin-bottom: 82px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
