--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,6 @@ img {
 
 .page__content-wrapper {
   max-width: 1220px;
-  width: 87%;
   margin: 0 auto;
 }
 
@@ -67,9 +66,31 @@ img {
     width: 85%;
   }
 }
+.content-wrapper {
+  box-sizing: border-box;
+  margin: 0 auto;
+  min-width: 320px;
+  max-width: 1220px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+@media (min-width: 768px) {
+  .content-wrapper {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+}
+@media (min-width: 1440px) {
+  .content-wrapper {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
 .page-header {
   min-width: 320px;
   margin: 0 auto;
+  box-sizing: border-box;
 }
 
 .page-header--catalog,
@@ -78,13 +99,11 @@ img {
 }
 
 .page-header__wrapper {
-  width: 87%;
   height: 65px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
-  margin: 0 auto;
   position: relative;
 }
 
@@ -104,6 +123,7 @@ img {
 @media (min-width: 768px) {
   .page-header {
     padding-top: 20px;
+    min-height: 940px;
   }
 
   .page-header--form {
@@ -114,8 +134,9 @@ img {
     margin-bottom: 64px;
   }
 
-  .page-header__wrapper {
-    width: 92%;
+  .page-header__logo-img {
+    width: 174px;
+    height: 52px;
   }
 
   .page-header__logo-text {
@@ -128,13 +149,22 @@ img {
 }
 @media (min-width: 1440px) {
   .page-header {
+    min-height: 696px;
+    margin-bottom: 80px;
     padding-top: 53px;
-    background-image: url("../img/index-background-desktop.jpg");
+    background-image: linear-gradient(90deg, #fff 0%, #fff 50%, rgba(104, 183, 56, 0.85) 50%), url("../img/index-background-desktop.jpg"), linear-gradient(90deg, #fff 50%, #403f44 50%);
     background-repeat: no-repeat;
-    background-position: right 0;
+    background-position: center 0, calc(50% + 360px) 0;
     background-size: auto 694px;
   }
-
+}
+@media (min-width: 1440px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 1440px) and (min-resolution: 2dppx) {
+  .page-header {
+    background-image: linear-gradient(90deg, #fff 0%, #fff 50%, rgba(104, 183, 56, 0.85) 50%), url("../img/index-background-desktop@2x.jpg"), linear-gradient(90deg, #fff 50%, #403f44 50%);
+    background-size: auto 694px, 720px auto, auto 694px;
+  }
+}
+@media (min-width: 1440px) {
   .page-header--catalog {
     margin-bottom: 74px;
     background-image: none;
@@ -142,25 +172,21 @@ img {
   .page-header--catalog .main-navigation__link {
     color: #000;
   }
-
+}
+@media (min-width: 1440px) {
   .page-header--form {
     background-image: none;
     margin-bottom: 73px;
   }
-
-  .page-header__wrapper {
-    max-width: 1220px;
-    width: 87%;
+}
+@media (min-width: 1440px) {
+  .page-header__logo-img {
+    width: 202px;
+    height: 59px;
   }
 }
 .page-main {
   min-width: 320px;
-}
-
-.page-main__wrapper {
-  width: 87%;
-  margin: 0 auto;
-  max-width: 1220px;
 }
 
 .page-main__title {
@@ -227,8 +253,6 @@ img {
 }
 
 .page-footer__wrapper {
-  width: 87%;
-  margin: 0 auto;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -251,7 +275,7 @@ img {
   }
 
   .page-footer__wrapper {
-    width: 92%;
+    min-width: 100%;
     flex-direction: row;
     justify-content: space-between;
   }
@@ -264,6 +288,7 @@ img {
 @media (min-width: 1440px) {
   .page-footer__wrapper {
     width: 1220px;
+    min-width: initial;
   }
 }
 .main-navigation {
@@ -335,27 +360,22 @@ img {
 .choose-program {
   position: relative;
   min-height: 480px;
-  background-image: url("../img/index-background-mobile.jpg");
+  background-image: linear-gradient(90deg, #fff 0%, rgba(104, 183, 56, 0.85) 0%, rgba(104, 183, 56, 0.85) 100%), url(../../img/index-background-mobile.jpg);
   background-repeat: no-repeat;
   background-position: center 0;
   background-size: auto 302px;
   margin-bottom: 15px;
 }
-
-.choose-program__decorate-bg {
-  width: 100%;
-  height: 302px;
-  position: absolute;
-  background-color: rgba(104, 183, 56, 0.85);
+@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
+  .choose-program {
+    background-image: linear-gradient(90deg, #fff 0%, rgba(104, 183, 56, 0.85) 0%, rgba(104, 183, 56, 0.85) 100%), url(../../img/index-background-mobile@2x.jpg);
+    background-size: auto 302px;
+  }
 }
 
 .choose-program__wrapper {
   position: relative;
-  width: 87%;
-  margin: 0 auto;
-  padding: 0;
   padding-top: 27px;
-  box-sizing: border-box;
 }
 
 .choose-program__title {
@@ -403,10 +423,7 @@ img {
   .choose-program {
     min-height: 790px;
     background-image: none;
-  }
-
-  .choose-program__decorate-bg {
-    display: none;
+    margin-bottom: 0;
   }
 
   .choose-program__wrapper {
@@ -422,6 +439,7 @@ img {
     margin-bottom: 40px;
     font-size: 60px;
     line-height: 60px;
+    position: relative;
   }
 
   .choose-program__text {
@@ -434,6 +452,12 @@ img {
 
   .choose-program__img-logo {
     position: absolute;
+    display: block;
+    width: 709px;
+    height: 609px;
+    left: calc(50% - 354px);
+    top: 254px;
+    margin: 0;
   }
 
   .choose-program__link {
@@ -447,8 +471,8 @@ img {
 }
 @media (min-width: 1440px) {
   .choose-program {
-    min-height: 600px;
-    margin-bottom: 80px;
+    min-height: 300px;
+    margin-bottom: 0;
   }
 
   .choose-program__wrapper {
@@ -458,12 +482,12 @@ img {
     max-width: 1220px;
   }
 
-  .choose-program__decorate-bg {
-    display: block;
-    width: 50%;
-    height: 694px;
-    right: 0;
-    top: -118px;
+  .choose-program__img-logo {
+    width: 552px;
+    height: 499px;
+    top: 10px;
+    left: unset;
+    right: calc(40% - 270px);
   }
 }
 .program-plans {
@@ -803,7 +827,6 @@ img {
 }
 
 .example__wrapper {
-  width: 87%;
   max-width: 1220px;
   margin: 0 auto;
 }
@@ -879,21 +902,16 @@ img {
 }
 
 .example__img-wrapper {
-  width: 280px;
-  height: 277px;
+  display: block;
   margin: 0 auto;
-  background-color: beige;
   margin-bottom: 15px;
+  background-color: transparent;
 }
 
 @media (min-width: 768px) {
   .example {
     background: linear-gradient(#fff 0%, #fff 60%, #eaeaea 60%, #eaeaea 100%);
     padding-bottom: 40px;
-  }
-
-  .example__wrapper {
-    width: 92%;
   }
 
   .example__title {
@@ -911,7 +929,7 @@ img {
   }
 
   .example__list {
-    grid-template-columns: 162px 162px 172px;
+    grid-template-columns: 162px 162px 1fr;
     grid-template-rows: 72px;
     gap: 42px;
   }
@@ -932,6 +950,9 @@ img {
   .example__item--large-cell {
     grid-column: 3/4;
     padding: 0;
+    width: 180px;
+    margin-left: auto;
+    text-align: end;
   }
 
   .example__cost {
@@ -954,7 +975,7 @@ img {
 
   .example__wrapper {
     display: flex;
-    width: 85%;
+    align-items: center;
   }
 
   .example__title {
@@ -975,7 +996,14 @@ img {
 
   .example__item--large-cell {
     grid-column: -1/1;
-    justify-content: start;
+    width: 360px;
+  }
+
+  .example__cost {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: space-between;
   }
 
   .example__description {
@@ -995,8 +1023,6 @@ img {
 }
 
 .address-map__wrapper {
-  width: 87%;
-  margin: 0 auto;
   padding-top: 26px;
   padding-bottom: 26px;
   display: grid;
@@ -1031,15 +1057,14 @@ img {
 
 @media (min-width: 768px) {
   .address-map__wrapper {
-    width: 92%;
-    padding: 56px 40px;
+    padding: 56px 70px;
     box-sizing: border-box;
     grid-template-columns: 180px 180px;
   }
 
   .address-map__wrapper--form {
-    padding-left: 60px;
-    padding-right: 60px;
+    padding-left: 70px;
+    padding-right: 70px;
   }
 
   .address-map__text {
@@ -1143,9 +1168,12 @@ img {
 }
 
 .example-slider__range {
-  width: 85px;
+  min-width: 85px;
   height: 14px;
   background-color: lightgreen;
+  flex-grow: 1;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 @media (min-width: 768px) {
@@ -1221,12 +1249,12 @@ img {
   margin-bottom: 18px;
 }
 
-.catalog__item--show-more {
+.catalog__item-show-more {
   box-sizing: border-box;
   min-height: 158px;
   padding-top: 53px;
 }
-.catalog__item--show-more .catalog__item-link {
+.catalog__item-show-more .catalog__item-link {
   margin-bottom: 8px;
 }
 
@@ -1325,7 +1353,7 @@ img {
     justify-self: end;
   }
 
-  .catalog__item--show-more {
+  .catalog__item-show-more {
     width: 324px;
     min-height: 429px;
     margin-top: 80px;
@@ -1333,13 +1361,13 @@ img {
     border: 2px solid #f2f2f2;
     box-sizing: border-box;
   }
-  .catalog__item--show-more .catalog__item-link {
+  .catalog__item-show-more .catalog__item-link {
     padding: 0;
     min-height: 44px;
     margin-top: 0;
     margin-bottom: 23px;
   }
-  .catalog__item--show-more .catalog__item-text {
+  .catalog__item-show-more .catalog__item-text {
     font-size: 16px;
     line-height: 18px;
     padding-right: 76px;
@@ -1377,14 +1405,14 @@ img {
     width: 245px;
   }
 
-  .catalog__item--show-more {
+  .catalog__item-show-more {
     width: 245px;
   }
-  .catalog__item--show-more .catalog__item-link {
+  .catalog__item-show-more .catalog__item-link {
     margin: 0;
     margin-bottom: 23px;
   }
-  .catalog__item--show-more .catalog__item-text {
+  .catalog__item-show-more .catalog__item-text {
     padding-left: 36px;
     padding-right: 36px;
     margin-bottom: 87px;
@@ -1477,10 +1505,22 @@ img {
   min-height: 290px;
   padding: 185px 60px 40px;
   box-sizing: border-box;
-  background-image: url("../../img/catalog-gift-bg-mobile.jpg");
+  background-image: linear-gradient(rgba(104, 183, 56, 0.85) 0%, rgba(104, 183, 56, 0.85) 100%), url("../../img/catalog-gift-bg-mobile.jpg");
   background-repeat: no-repeat;
   background-position: center;
-  background-color: rgba(104, 183, 56, 0.85);
+  position: relative;
+}
+.additional-products__gift::before {
+  content: "";
+  display: block;
+  position: absolute;
+  left: calc(50% - 40px);
+  top: 58px;
+  width: 78px;
+  height: 80px;
+  background-image: url(../../img/catalog-icon-gift.svg);
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .additional-products__gift-text {
@@ -1546,9 +1586,15 @@ img {
     min-height: unset;
     min-height: 200px;
     padding: 0;
-    padding: 70px 124px 70px 422px;
+    padding: 20px;
+    padding-left: 60%;
+    padding-top: 70px;
     box-sizing: border-box;
-    background-image: url("../../img/catalog-gift-bg-tablet.jpg");
+    background-image: linear-gradient(rgba(104, 183, 56, 0.85) 0%, rgba(104, 183, 56, 0.85) 100%), url("../../img/catalog-gift-bg-tablet.jpg");
+  }
+  .additional-products__gift::before {
+    top: 57px;
+    left: calc(20% - 50px);
   }
 
   .additional-products__gift-text {
@@ -1597,11 +1643,20 @@ img {
     border-bottom: 1px solid #cdcdcd;
   }
 
+  .additional-products__list-title {
+    max-width: 320px;
+    word-wrap: break-word;
+  }
+
   .additional-products__gift {
-    background-image: url("../../img/catalog-gift-bg-desktop.jpg");
+    background-image: linear-gradient(rgba(104, 183, 56, 0.85) 0%, rgba(104, 183, 56, 0.85) 100%), url("../../img/catalog-gift-bg-desktop.jpg");
     width: 245px;
     height: 288px;
     padding: 184px 40px 40px;
+  }
+  .additional-products__gift::before {
+    top: 55px;
+    left: calc(50% - 40px);
   }
 
   .additional-products__gift-text {
@@ -1724,6 +1779,10 @@ img {
   margin-bottom: 18px;
 }
 
+.form-aim__radio {
+  margin: 0;
+}
+
 .form-aim__title-input {
   font-size: 16px;
   color: #222;
@@ -1748,6 +1807,15 @@ img {
   .form-aim {
     width: 568px;
     margin-bottom: 0;
+  }
+
+  .form-aim__list {
+    height: 100%;
+    padding: 30px 28px 30px 88px;
+  }
+
+  .form-aim__title-input {
+    line-height: 30px;
   }
 }
 .form-contacts {
