--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
   font-family: "Oswald";
   font-style: normal;
   font-weight: 400;
-  src: url("fonts/oswaldregular.woff2") format("woff2"), url("fonts/oswaldregular.woff") format("woff");
+  src: url("../fonts/oswaldregular.woff2") format("woff2"), url("../fonts/oswaldregular.woff") format("woff");
   font-display: swap;
 }
 .visually-hidden {
@@ -117,7 +117,7 @@ img {
   height: 16px;
   border: none;
   background-color: #fff;
-  background-image: url("img/sandwich.svg");
+  background-image: url("../img/sandwich.svg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
@@ -158,7 +158,7 @@ img {
     min-height: 696px;
     margin-bottom: 80px;
     padding-top: 53px;
-    background-image: linear-gradient(90deg, #fff 0%, #fff 50%, rgba(104, 183, 56, 0.85) 50%), url("img/index-background-desktop.jpg"), linear-gradient(90deg, #fff 50%, #403f44 50%);
+    background-image: linear-gradient(90deg, #fff 0%, #fff 50%, rgba(104, 183, 56, 0.85) 50%), url("../img/index-background-desktop.jpg"), linear-gradient(90deg, #fff 50%, #403f44 50%);
     background-repeat: no-repeat;
     background-position: center 0, calc(50% + 360px) 0;
     background-size: auto 694px;
@@ -166,7 +166,7 @@ img {
 }
 @media (min-width: 1440px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 1440px) and (min-resolution: 2dppx) {
   .page-header {
-    background-image: linear-gradient(90deg, #fff 0%, #fff 50%, rgba(104, 183, 56, 0.85) 50%), url("img/index-background-desktop@2x.jpg"), linear-gradient(90deg, #fff 50%, #403f44 50%);
+    background-image: linear-gradient(90deg, #fff 0%, #fff 50%, rgba(104, 183, 56, 0.85) 50%), url("../img/index-background-desktop@2x.jpg"), linear-gradient(90deg, #fff 50%, #403f44 50%);
     background-size: auto 694px, 720px auto, auto 694px;
   }
 }
@@ -372,7 +372,7 @@ img {
 .choose-program {
   position: relative;
   min-height: 480px;
-  background-image: linear-gradient(90deg, #fff 0%, rgba(104, 183, 56, 0.85) 0%, rgba(104, 183, 56, 0.85) 100%), url(img/index-background-mobile.jpg);
+  background-image: linear-gradient(90deg, #fff 0%, rgba(104, 183, 56, 0.85) 0%, rgba(104, 183, 56, 0.85) 100%), url(../img/index-background-mobile.jpg);
   background-repeat: no-repeat;
   background-position: center 0;
   background-size: auto 302px;
@@ -380,7 +380,7 @@ img {
 }
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
   .choose-program {
-    background-image: linear-gradient(90deg, #fff 0%, rgba(104, 183, 56, 0.85) 0%, rgba(104, 183, 56, 0.85) 100%), url(img/index-background-mobile@2x.jpg);
+    background-image: linear-gradient(90deg, #fff 0%, rgba(104, 183, 56, 0.85) 0%, rgba(104, 183, 56, 0.85) 100%), url(../img/index-background-mobile@2x.jpg);
     background-size: auto 302px;
   }
 }
@@ -557,7 +557,7 @@ img {
   width: 36px;
   height: 50px;
   position: absolute;
-  background-image: url("img/cat-slim-mobile.svg");
+  background-image: url("../img/cat-slim-mobile.svg");
   background-repeat: no-repeat;
   top: 20px;
   left: 26px;
@@ -566,7 +566,7 @@ img {
 .program-plans__title--cat-pro::after {
   width: 67px;
   height: 28px;
-  background-image: url("img/cat-pro-mobile.svg");
+  background-image: url("../img/cat-pro-mobile.svg");
   background-repeat: no-repeat;
   top: 36px;
   left: 7px;
@@ -591,7 +591,7 @@ img {
   align-items: center;
   width: 133px;
   height: 24px;
-  background-image: url("img/icon-arrow.svg");
+  background-image: url("../img/icon-arrow.svg");
   background-repeat: no-repeat;
   background-position: center right 8px;
 }
@@ -624,7 +624,7 @@ img {
   .program-plans__title::after {
     width: 140px;
     height: 194px;
-    background-image: url("img/cat-slim-tablet.svg");
+    background-image: url("../img/cat-slim-tablet.svg");
     top: 80px;
     left: initial;
     right: 85px;
@@ -633,7 +633,7 @@ img {
   .program-plans__title--cat-pro::after {
     width: 268px;
     height: 112px;
-    background-image: url("img/cat-pro-tablet.svg");
+    background-image: url("../img/cat-pro-tablet.svg");
     top: 125px;
     left: initial;
     right: 36px;
@@ -688,7 +688,7 @@ img {
   .program-plans__title::after {
     width: 70px;
     height: 97px;
-    background-image: url("img/cat-slim-desktop.svg");
+    background-image: url("../img/cat-slim-desktop.svg");
     top: 41px;
     right: initial;
     left: 67px;
@@ -699,7 +699,7 @@ img {
     height: 56px;
     top: 67px;
     left: 33px;
-    background-image: url("img/cat-pro-desktop.svg");
+    background-image: url("../img/cat-pro-desktop.svg");
   }
 }
 .advantages {
@@ -747,19 +747,19 @@ img {
 }
 
 .advantages__item--healthy-nutrients::before {
-  background-image: url("img/icon-leaf.svg");
+  background-image: url("../img/icon-leaf.svg");
 }
 
 .advantages__item--release-form::before {
-  background-image: url("img/icon-tub.svg");
+  background-image: url("../img/icon-tub.svg");
 }
 
 .advantages__item--change-meal::before {
-  background-image: url("img/icon-eat.svg");
+  background-image: url("../img/icon-eat.svg");
 }
 
 .advantages__item--results::before {
-  background-image: url("img/icon-alarm.svg");
+  background-image: url("../img/icon-alarm.svg");
 }
 
 .advantages__text {
@@ -1148,15 +1148,15 @@ img {
 }
 
 .social-networks__link--vk-icon {
-  background-image: url("img/icon-vk.svg");
+  background-image: url("../img/icon-vk.svg");
 }
 
 .social-networks__link--instagram-icon {
-  background-image: url("img/icon-instagram.svg");
+  background-image: url("../img/icon-instagram.svg");
 }
 
 .social-networks__link--facebook-icon {
-  background-image: url("img/icon-facebook.svg");
+  background-image: url("../img/icon-facebook.svg");
 }
 
 @media (min-width: 768px) {
@@ -1532,14 +1532,14 @@ img {
   min-height: 290px;
   padding: 185px 60px 40px;
   box-sizing: border-box;
-  background-image: linear-gradient(rgba(104, 183, 56, 0.85) 0%, rgba(104, 183, 56, 0.85) 100%), url("img/catalog-gift-bg-mobile.jpg");
+  background-image: linear-gradient(rgba(104, 183, 56, 0.85) 0%, rgba(104, 183, 56, 0.85) 100%), url("../img/catalog-gift-bg-mobile.jpg");
   background-repeat: no-repeat;
   background-position: center;
   position: relative;
 }
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
   .additional-products__gift {
-    background-image: linear-gradient(rgba(104, 183, 56, 0.85) 0%, rgba(104, 183, 56, 0.85) 100%), url("img/catalog-gift-bg-mobile@2x.jpg");
+    background-image: linear-gradient(rgba(104, 183, 56, 0.85) 0%, rgba(104, 183, 56, 0.85) 100%), url("../img/catalog-gift-bg-mobile@2x.jpg");
     background-size: auto 289px;
   }
 }
@@ -1551,7 +1551,7 @@ img {
   top: 58px;
   width: 78px;
   height: 80px;
-  background-image: url("img/catalog-icon-gift.svg");
+  background-image: url("../img/catalog-icon-gift.svg");
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -1623,7 +1623,7 @@ img {
     padding-left: 60%;
     padding-top: 70px;
     box-sizing: border-box;
-    background-image: linear-gradient(rgba(104, 183, 56, 0.85) 0%, rgba(104, 183, 56, 0.85) 100%), url("img/catalog-gift-bg-tablet@1x.jpg");
+    background-image: linear-gradient(rgba(104, 183, 56, 0.85) 0%, rgba(104, 183, 56, 0.85) 100%), url("../img/catalog-gift-bg-tablet@1x.jpg");
   }
   .additional-products__gift::before {
     top: 57px;
@@ -1632,7 +1632,7 @@ img {
 }
 @media (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 768px) and (min-resolution: 2dppx) {
   .additional-products__gift {
-    background-image: linear-gradient(rgba(104, 183, 56, 0.85) 0%, rgba(104, 183, 56, 0.85) 100%), url("img/catalog-gift-bg-tablet@2x.jpg");
+    background-image: linear-gradient(rgba(104, 183, 56, 0.85) 0%, rgba(104, 183, 56, 0.85) 100%), url("../img/catalog-gift-bg-tablet@2x.jpg");
     background-size: auto 200px;
   }
 }
@@ -1689,7 +1689,7 @@ img {
   }
 
   .additional-products__gift {
-    background-image: linear-gradient(rgba(104, 183, 56, 0.85) 0%, rgba(104, 183, 56, 0.85) 100%), url("img/catalog-gift-bg-desktop@1x.jpg");
+    background-image: linear-gradient(rgba(104, 183, 56, 0.85) 0%, rgba(104, 183, 56, 0.85) 100%), url("../img/catalog-gift-bg-desktop@1x.jpg");
     background-size: 245px 288px;
     width: 245px;
     height: 288px;
@@ -1702,7 +1702,7 @@ img {
 }
 @media (min-width: 1440px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 1440px) and (min-resolution: 2dppx) {
   .additional-products__gift {
-    background-image: linear-gradient(rgba(104, 183, 56, 0.85) 0%, rgba(104, 183, 56, 0.85) 100%), url("img/catalog-gift-bg-desktop@2x.jpg");
+    background-image: linear-gradient(rgba(104, 183, 56, 0.85) 0%, rgba(104, 183, 56, 0.85) 100%), url("../img/catalog-gift-bg-desktop@2x.jpg");
   }
 }
 @media (min-width: 1440px) {
